Fix: Fix ui formating, fonts and alignment

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,10 @@
 
 html, body { height: 100%; }
 
+html {
+  font-family: 'Trebuchet MS' !important;
+}
+
 
 
 .activeButton{
@@ -17,7 +21,7 @@ html, body { height: 100%; }
 }
 
 .activeButton2{
-    @apply border-pink-500 text-gray-900 
+    @apply border-pink-500 text-gray-900
 }
 
 .activeText2{
